Bug 1301920. Call MarkChanged before getting bitmap for surface in skia. r=lsalzman