gfx/2d/DrawTargetSkia.cpp
@@ -510,12 +510,12 @@ DrawTargetSkia::DrawSurface(SourceSurface *aSurface,
     return;
   }
 
+  MarkChanged();
+
   SkBitmap bitmap = GetBitmapForSurface(aSurface);
   if (bitmap.empty()) {
     return;
   }
-
-  MarkChanged();
 
   SkRect destRect = RectToSkRect(aDest);
   SkRect sourceRect = RectToSkRect(aSource);
@@ -563,12 +563,12 @@ DrawTargetSkia::DrawSurfaceWithShadow(SourceSurface *aSurface,
     return;
   }
 
+  MarkChanged();
+
   SkBitmap bitmap = GetBitmapForSurface(aSurface);
   if (bitmap.empty()) {
     return;
   }
-
-  MarkChanged();
 
   mCanvas->save();
   mCanvas->resetMatrix();
@@ -1439,12 +1439,12 @@ DrawTargetSkia::Draw3DTransformedSurface(SourceSurface* aSurface, const Matrix4x
     return false;
   }
 
+  MarkChanged();
+
   SkBitmap bitmap = GetBitmapForSurface(aSurface);
   if (bitmap.empty()) {
     return true;
   }
-
-  MarkChanged();
 
   mCanvas->save();
 
@@ -1632,12 +1632,12 @@ DrawTargetSkia::CopySurface(SourceSurface *aSurface,
                             const IntRect& aSourceRect,
                             const IntPoint &aDestination)
 {
+  MarkChanged();
+
   SkBitmap bitmap = GetBitmapForSurface(aSurface);
   if (bitmap.empty()) {
     return;
   }
-
-  MarkChanged();
 
   mCanvas->save();
   mCanvas->setMatrix(SkMatrix::MakeTrans(SkIntToScalar(aDestination.x), SkIntToScalar(aDestination.y)));
